--- a/apifilmes/src/main/resources/application.properties
+++ b/apifilmes/src/main/resources/application.properties
@@ -1,2 +1,12 @@
 spring.data.mongodb.database=${MONGO_DATABASE}
 spring.data.mongodb.uri=mongodb+srv://${MONGO_USER}:${MONGO_PASSWORD}@${MONGO_CLUSTER}.mongodb.net/
+
+spring.datasource.url=jdbc:mysql://localhost:3306/app_filmes
+spring.datasource.username=root
+spring.datasource.password=root
+
+# Configuração do JPA/Hibernate
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
